--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/chronicle-display");
+/* @import url("https://fonts.cdnfonts.com/css/chronicle-display"); */
 
 @font-face {
   font-family: "Gilroy-Bold";
@@ -9,10 +9,10 @@
   src: url("./assets/fonts/Gilroy-ExtraBold.woff") format("woff");
 }
 @font-face {
-  font-family: "Chronicle-Semi";
+  font-family: "Chronicle Display Semi";
   src:
-    url("ChronicleDisplay-Semi.woff2") format("woff2"),
-    url("ChronicleDisplay-Semi.woff") format("woff");
+    url("./assets/fonts/ChronicleDisplay-Semi.woff2") format("woff2"),
+    url("./assets/fonts/ChronicleDisplay-Semi.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -36,4 +36,21 @@
     max-width: 1760px;
     margin: 0 auto;
   }
+}
+
+/* Стилизация полосы прокрутки для всего документа */
+::-webkit-scrollbar {
+  width: 3px; /* Ширина полосы прокрутки */
+}
+
+::-webkit-scrollbar-track {
+  background: #e6e8e7; /* Цвет фона дорожки */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fff; /* Цвет ручки полосы прокрутки */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Цвет ручки полосы прокрутки при наведении */
 }
