--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,11 @@
 }
 
 @layer components {
+  .container {
+    max-width: 1462px;
+  }
   .max-container {
-    max-width: 1760px;
+    max-width: 1920px;
     margin: 0 auto;
   }
 }
